SubBt/force-app/main/default/objects/DocTemplate_Page__c/DocTemplate_Page__c.object-meta.xml
<CustomObject>
    <label>Doc Template Page</label>
    <nameField>
        <displayFormat>DTP-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Doc Template Pages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>