SubBt/force-app/main/default/objects/DocTemplate_Page__c/fields/Doc_Template__c.field-meta.xml
<CustomField>
    <fullName>Doc_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Doc Template</label>
    <referenceTo>Quote_Template__c</referenceTo>
    <relationshipLabel>Doc Template Pages</relationshipLabel>
    <relationshipName>Doc_Template_Pages</relationshipName>
    <type>Lookup</type>
</CustomField>