SubBt/force-app/main/default/objects/DocTemplate_Page__c/fields/DocTemplate_Page__c.field-meta.xml
<CustomField>
    <fullName>DocTemplate_Page__c</fullName>
    <label>DocTemplate Page</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>