SubBt/force-app/main/default/objects/DocTemplate_Page__c/fields/LineItems__c.field-meta.xml
<CustomField>
    <fullName>LineItems__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LineItems</label>
    <type>Checkbox</type>
</CustomField>