SubBt/force-app/main/default/objects/DocTemplate_Page__c/fields/Page_Sort_order__c.field-meta.xml
<CustomField>
    <fullName>Page_Sort_order__c</fullName>
    <label>Page Sort order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>