SubBt/force-app/main/default/objects/DocTemplate_Page__c/fields/Template_Page_Brake__c.field-meta.xml
<CustomField>
    <fullName>Template_Page_Brake__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Template Page Brake</label>
    <type>Checkbox</type>
</CustomField>